# datedelta

./: .gitignore  LICENSE  README.rst  datedelta.py  pyproject.toml  setup.cfg  setup.py  test_datedelta.py  tox.ini
